BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_EntitlementSPRTHrs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom settings contains the SPR time for entitlements</description>
    <fields>
        <fullName>HSvc_Entitlement_Name__c</fullName>
        <label>Entitlement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_SPR_Time__c</fullName>
        <label>SPR Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>HSvc_EntitlementSPRTHrs</label>
</CustomObject>